--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Change history for Term-Spinner-Lite
 
 {{$NEXT}}
+            Added a delay attribute
 
 0.01        2012-10-24
             Initial release
