Added SEE ALSO section to doc

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Change history for Term-Spinner-Lite
 
 {{$NEXT}}
             Set pod encoding to UTF-8
+            Added a SEE ALSO section to doc
 
 0.03        2013-01-03
 
